@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+* Performance warning if runtime debug assertions are turned on
+
 
 Version 2.2 (2016-06-28)
 ========================
